--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,10 +4,10 @@ $menuActiveText: #ffffff;
 $subMenuActiveText: #f4f4f5;
 
 $menuBg: #304156;
-$menuHover: #263445;
+$menuHover: #263445; // menu
 
 $subMenuBg: #1f2d3d;
-$subMenuHover: #001528;
+$subMenuHover: #001528; // 每一项的el-menu-item 最里层
 
 $sideBarWidth: 210px;
 $hideSideBarWidth: 65px;
